# DeSciTokyo

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: sync-wiki.yml
configs/: default.yaml
docs/wiki/: AI-Superior-World-Analysis.md  Architecture.md  Bottleneck-Persists-Analysis.md  Experiment-Design.md  Future-Work.md  Home.md  Meta-Overhead-Analysis.md  Meta-Science-MS1.md  Meta-Science-MS2.md  Meta-Science-MS3.md  Meta-Science-MS4.md  Meta-Science-Overview.md  Methodology-Comparison.md  Monte-Carlo-Analysis.md  Paper-Mapping.md  Probabilistic-Model-Analysis.md  Results-Analysis.md  Sensitivity-Analysis.md
poc/: README.md
poc/results/: Baseline_No_Optimization.json  ms1_stats.json  ms2_stats.json  ms3_stats.json  ms4_stats.json  v2_AI-SciOps_Autonomous_Optimization.json  v2_Adaptive-SciOps_Metric-driven.json  v2_Holistic-SciOps_Integrated.json  v2_Kanban-SciOps_Pull-based_Flow.json  v2_TOC_+_PDCA.json  v6_Agile_Sprint-based.json  v6_Kanban_Pull-based_Flow.json  v6_PDCA_Plan-Do-Check-Act.json  v6_TOC_Theory_of_Constraints.json
poc/src/: advanced_optimizers.py  funding_models.py  individual_optimizers.py  knowledge_network.py  management_overhead.py  meta_overhead_optimizer.py  meta_science_ecosystem.py  meta_science_models.py  optimizers.py  pm_optimizers.py  probabilistic_process.py  replication_engine.py  run_ai_superior.py  run_bottleneck_persists.py  (+16 more)
scripts/: run_experiment.py  sync-wiki.sh
wiki/: Architecture.md  Challenge-Models.md  Experiment-Design.md  Home.md  Pipeline-Model.md  Results.md  Strategies.md  Usage.md
(+51 files in other folders)
