[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sciops-sim"
version = "0.1.0"
description = "Scientific research pipeline simulation: management strategies and AI capability analysis"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "SALib>=1.4",
    "joblib>=1.3",
    "tqdm>=4.65",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sciops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
